<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="label_now">now</string>
	<string name="label_bill">bill</string>

	<string name="app_get_started">Before using this program, you need to know four things: <b>1)</b> You must tell it how you\'re billed (and update it if your bill changes).  <b>2)</b> It needs several days of call history to work, which means you can\'t clear your call log, or it can\'t make predictions. <b>3)</b> It assumes this phone is the only device that uses your time. <b>4)</b> The author isn\'t responsible for your bill.</string>

	<string name="app_help_1">This program uses your phone\'s stored call logs to advise you how often you may safely use your phone.  It can raise warnings when you are over your time limit, and it can warn you if you are likely to exhaust your call time allocation prematurely.</string>
	<string name="app_help_2"><b>Important:  Avoid clearing call history in your phone!</b>  Without accurate call trends, predictions and warnings are impossible or incorrect.  Additionally, this program assumes all calls on your bill use this phone and are represented in the call log; if you move your SIM to other phones, then all bets are off.</string>
	<string name="app_help_3">The accuracy of this program depends on unreliable factors, so you should not solely rely on it to avoid costs.  The author disclaims all responsibility for its use.  You are solely responsible for your bill.</string>
	<string name="app_help_4">If you find bugs, please submit them at http://bit.ly/timecop .</string>

	<string name="app_overview_1"><b>How to use Time Cop:</b>  This program doesn\'t get in your way.  It sits in the background, and posts a warning to your notification area if there is something to say.  As additional eye-candy that is nice if you\'re feeling nosy or geeky or bored, you may always view the prediction graph.</string>

	<string name="app_overview_2">It represents your billing period, and time marches across it from left to right; left edge = bill begins, and right edge = bill due.  The current day is represented with a vertical line labled <b>now</b>.  Calls cause the usage line to grow upward, and if the line grows higher than the red <b>X minutes in plan</b> line, then you\'re spending extra money.  The dashed line from <b>now</b> to <b>bill</b> is Time Cop\'s prediction about what you will use, based on the last 60 days (at most) of history.  The amount of allowed time and the billing date have to be configured, before Time Cop works.  Set those now, and Time Cop will vigilantly keep you safe.</string>

	<string name="data_too_short_to_trend">Sorry. There is not yet enough information to show an accurate trend.</string>


	<string name="notification_overage_prediction_slug">Call time likely too much.</string>
	<string name="notification_overage_prediction_title">Time used too fast.</string>
	<string name="notification_overage_prediction_description">Allowed %3$dmin, at %1$d, %4$d likely.</string><!-- 1=all, 2=metered, 3=limit, 4=prediction -->

	<string name="notification_overage_occurred_slug">Calls exceeded allotment.</string>
	<string name="notification_overage_occurred_title">Too many prime-time calls!</string>
	<string name="notification_overage_occurred_description">Allowed %3$dmin, at %1$d, %4$d likely.</string><!-- 1=all, 2=metered, 3=limit, 4=prediction -->

	<string name="tap_a_contact_to_remove_it">Tap a contact to remove it.</string>

	<string name="pref_title">Settings</string>
	<string name="pref_title_post_notifications">Post Notifications?</string>
	<string name="pref_summon_post_notifications">Emit warnings.</string>
	<string name="pref_summoff_post_notifications">No warning flags will be raised.</string>
	<string name="pref_title_adv_settings">Advanced settings</string>
	<string name="pref_title_start_metering">Start-call metering</string>
	<string name="pref_summon_start_metering">Entire duration metered as start.</string>
	<string name="pref_summoff_start_metering">Each minute judged independent of start.</string>
	<string name="pref_title_weekends_free">Are weekends free?</string>
	<string name="pref_summon_weekends_free">Weekends cost nothing.</string>
	<string name="pref_summoff_weekends_free">Weekends cost same as weekdays.</string>
	<string name="pref_title_nights_free">Are nights free? </string>
	<string name="pref_summon_nights_free">Only daytime hours are billed.</string>
	<string name="pref_summoff_nights_free">Nighttime is billed equally.</string>


	<string name="vis_prediction_description">predicted used: %1$d</string>
	<string name="vis_limit_description">%1$d minutes in plan</string>
	<string name="vis_summary">You have used %1$d of %6$d minutes you pay for.  You\'re predicted to use %7$d in the bill from %3$s to %4$s.</string>
	<!-- 1 metered min count, 2 total min count, 3 start bill date, 4 end, 5 call count, 6 min limit, 7 prediction -->
	<string name="vis_summary_no_prediction">You have used %1$d of %6$d minutes you\'re allowed.  Unfortunately, it\'s still too early to predict total.</string>
	<!-- same, but no #7 -->

	<string name="pref_min_lim_title">Metered minutes allowed</string>
	<string name="pref_min_lim_summary">Number of acceptable prime-time minutes.</string>

	<string name="pref_first_bill_day_title">Day of month bill closes</string>
	<string name="pref_first_bill_day_summary">End of billing cycle.</string>

	<string name="pref_group_faves_list_title">Choose free contacts</string>

	<string name="pref_group_time_based_billing_title">Daytime and Weekend Settings</string>
	<string name="pref_range_start_hour">Daytime start</string>
	<string name="pref_range_end_hour">Daytime end</string>

	<string name="title_audit">Audit Metering</string>

	<string name="pref_title_some_contacts_freeP">Some contacts are free?</string>
	<string name="pref_summon_some_contacts_freeP">Some are free always. My Faves, e.g.</string> 
	<string name="pref_summoff_some_contacts_freeP">All contacts are billed equally.</string>

	<string name="pref_title_received_calls_metered">Incoming calls metered?</string>
	<string name="pref_summon_received_calls_metered">Yes, inbound count. (Common in U.S.)</string> 
	<string name="pref_summoff_received_calls_metered">No, inbound are free. (Common outside U.S.)</string>

</resources>
