<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <ScrollView
      android:id="@+id/root"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  >
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scrollbars="vertical"
		android:padding="10sp"
		>
		<TextView  
			android:text="@string/app_name"
			android:textSize="30sp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:drawableLeft="@drawable/icon"
			android:gravity="center"
			/>
		<TextView  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:autoLink="all"
			android:text="@string/app_help_1"
			android:gravity="left"
			android:padding="10sp"
			/>
		<TextView  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:autoLink="all"
			android:text="@string/app_help_2"
			android:gravity="left"
			android:padding="10sp"
			/>
		<TextView  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:autoLink="all"
			android:text="@string/app_help_3"
			android:gravity="left"
			android:padding="10sp"
			/>
		<TextView  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:autoLink="all"
			android:text="@string/app_overview_1"
			android:gravity="left"
			android:padding="10sp"
			/>
		<ImageView
			android:padding="8sp"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:src="@drawable/example_visualization"
			android:gravity="center"
			/>
		<TextView  
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:autoLink="all"
			android:text="@string/app_overview_2"
			android:gravity="left"
			android:padding="10sp"
			/>
		<ImageButton
			android:id="@+id/button_okay"
			android:src="@drawable/android:ic_menu_preferences"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			/>

	</LinearLayout>
  </ScrollView>
</LinearLayout>


